--- a/detail11.html
+++ b/detail11.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,7 +445,7 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Aktivitas Fisik Bermanfaat Bagi Kesehatan Mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Para ilmuwan telah lama mengetahui bahwa tetap aktif baik untuk kesehatan fisik Anda. Ini mengurangi
                     risiko penyakit jantung, stroke, kanker, dan penyakit lainnya.Baru-baru ini, para ilmuwan juga
                     menemukan hubungan antara menjadi aktif dan penurunan risiko gejala
@@ -455,7 +455,7 @@
                     meringankan kondisi kesehatan mental.
                 </p>
                 <h2 class="info-title"> Latihan dan kesehatan mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Beberapa penelitian besar telah menyelidiki apakah aktivitas fisik berhubungan dengan risiko
                     kesehatan mental. <br> <br>
 
@@ -476,7 +476,7 @@
                     bagi sebagian orang hal ini bersifat sebab-akibat, namun tidak bagi sebagian orang lainnya.
                 </p>
                 <h2 class="info-title"> Apa Yang Harus Anda Lakukan?</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Aktivitas fisik adalah cara terbaik untuk mendukung kesehatan secara keseluruhan dan mengurangi
                     risiko berbagai kondisi kronis .
 
@@ -503,7 +503,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -558,7 +558,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
