--- a/detail2.html
+++ b/detail2.html
@@ -558,7 +558,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
