--- a/detail4.html
+++ b/detail4.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,14 +445,14 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> 10 Jenis Gangguan Mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Terdapat banyak jenis gangguan mental yang mempunyai ciri serta metode pengobatan yang berbeda.
                     Beberapa di antaranya hanya memerlukan terapi percakapan saja, dan beberapa di antaranya memerlukan
                     konsumsi obat berkala hingga terapi berkepanjangan. Tiap jenis gangguan mental sendiri mempunyai
                     berbagai macam faktor penyebabnya, baik karena trauma masa lalu hingga warisan genetik. Berikut
                     jenis-jensinya.
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Gangguan Kecemasan</strong><br>Keluhan pertama yang dialami adalah rasa cemas
                         berlebihan, dimana penderitanya merasa khawatir dan ketakutan secara terus-menerus. Kondisi ini
                         bisa terjadi kepada siapa saja, terutama bagi wanita di atas usia 30 tahun.</li>
@@ -498,7 +498,7 @@
                         sampai depresi. Tidak hanya orang dewasa saja, anak-anak juga bisa terkena gangguan ini.</b>
                     </li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Gangguan mental sering disepelekan karena tidak memiliki dampak yang terlihat atau dapat dimengerti
                     oleh orang awam secara langsung. Karenanya, sangat penting untuk Anda atau penderita untuk
                     mendapatkan perhatian dan penanganan yang tepat. Jika Anda mengalami salah satu dari gejala gangguan
@@ -516,7 +516,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -571,7 +571,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
