--- a/detail5.html
+++ b/detail5.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,7 +445,7 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Cara Meredakan Anxiety</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Anxiety seringkali dipicu oleh berbagai faktor, salah satunya tekanan dalam hidup. Salah satu cara
                     untuk mengatasinya yaitu menarik diri sejenak dari berbagai hal yang membuat cemas untuk menenangkan
                     diri. Namun, bagi pengidap anxiety disorder atau gangguan kecemasan, rasa cemas, gelisah, dan
@@ -454,7 +454,7 @@
 
                     Nah, berikut beberapa hal yang bisa kamu lakukan untuk meredakan anxiety atau gangguan kecemasan.
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Tarik napas dalam-dalam</strong><br>Cobalah menarik napas dalam-dalam agar tubuh
                         terasa rileks dan aktivitas saraf di otak yang menyebabkan rasa cemas berkurang.
 
@@ -498,7 +498,7 @@
                         cara yang paling cocok untuk meredakannya.</b>
                     </li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Apabila kamu atau orang terdekat sering mengalami anxiety, jangan ragu untuk menghubungi dokter jiwa
                     atau psikiater yang sudah direkomendasikan oleh Arti.
                 </p>
@@ -514,7 +514,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -569,7 +569,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
