--- a/detail6.html
+++ b/detail6.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,14 +445,14 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Waspada Ragam Jenis Depresi Ini</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Depresi adalah gangguan kesehatan mental yang serius dan cukup umum terjadi. Namun, jenis depresi
                     ada banyak. Mulai dari yang ringan, sedang, hingga cukup parah dan berisiko mengancam nyawa. Pada
                     dasarnya, meski jenisnya cukup banyak, depresi punya satu kesamaan, yaitu gangguan suasana hati,
                     yang jauh lebih serius dibanding kesedihan biasa. Cara agar lebih bisa memahami gangguan kesehatan
                     mental ini, berikut ini jenis depresi yang perlu diwaspadai:
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Depresi Mayor</strong><br>Depresi mayor adalah salah satu jenis depresi yang paling
                         umum terdiagnosis. Jenis depresi ini ditandai dengan gejala kesedihan, putus asa, dan kesepian,
                         yang berlangsung selama lebih dari dua minggu. Gejala depresi ini cukup serius dan berdampak
@@ -504,7 +504,7 @@
                         atau perpisahan dengan keluarga dekat.
                     </li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Itulah jenis depresi yang perlu diketahui dan diwaspadai. Jika kamu merasa mengalaminya, jangan ragu
                     untuk segera mencari bantuan ahli.
                 </p>
@@ -520,7 +520,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -575,7 +575,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
