--- a/detail9.html
+++ b/detail9.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,7 +445,7 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Tips Remaja Dapat Menjaga Kesehatan Mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Kita wajib prihatin dengan berbagai kasus bunuh diri yang terjadi di kalangan mahasiswa di berbagai
                     kampus akhir-akhir ini. Ini seperti membenarkan hipotesis yang menyatakan anak muda rentan alami
                     gangguan kesehatan mental. Yuk pahami beberapa tips untuk menjaga kesehatan mental. <br> <br>
@@ -454,7 +454,7 @@
                     tuntutan sosial, dan perubahan hidup yang signifikan. Berikut adalah beberapa tips untuk menjaga
                     kesehatan mental mahasiswa:
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Atur Waktu dengan Bijak</strong><br>Buat jadwal yang teratur untuk kuliah, studi,
                         istirahat, dan rekreasi. Hindari menumpuk tugas-tugas di waktu yang sama dan pastikan untuk
                         memberikan diri Anda cukup waktu untuk istirahat.</li>
@@ -473,7 +473,7 @@
                         akademis yang berlebihan.
                     </li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Jadi menjaga kesehatan mental adalah suatu perjalanan yang berkelanjutan. Perhatikan diri Anda
                     sendiri, dan jika Anda merasa kesulitan, jangan ragu untuk mencari dukungan dari teman, keluarga,
                     atau profesional kesehatan mental. <br> <br>
@@ -493,7 +493,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -548,7 +548,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
