--- a/detail10.html
+++ b/detail10.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,7 +445,7 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title">Mengatasi Stres di Tengah Pandemi: 3 Tips Penting</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Pandemi virus corona telah mengubah banyak aspek kehidupan kita, dan stres adalah salah satu
                     tantangan utama yang dihadapi oleh banyak orang.
                     Dengan ketidakpastian mengenai kesehatan, ekonomi, dan kehidupan sosial, mudah untuk merasa
@@ -453,7 +453,7 @@
                     Namun, ada beberapa cara efektif untuk mengatasi stres ini dan menjaga kesehatan mental Anda.
                     Berikut adalah tiga tips penting yang bisa Anda terapkan:
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Tetap Terhubung dengan Orang Lain</strong><br> Meskipun fisik kita mungkin terpisah,
                         penting untuk tetap terhubung dengan keluarga dan teman melalui panggilan video atau pesan.
                         Dukungan sosial dapat membantu mengurangi rasa kesepian dan memberi Anda kesempatan untuk
@@ -468,7 +468,7 @@
                         hari untuk berlatih teknik ini untuk membantu menjaga ketenangan dalam menghadapi tantangan
                         sehari-hari.</li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Dengan menerapkan tips-tips ini, Anda dapat membantu mengelola stres yang mungkin timbul selama
                     pandemi dan menjaga kesehatan mental Anda tetap baik. Ingatlah bahwa penting untuk mencari bantuan
                     profesional jika Anda merasa tertekan secara berlebihan atau merasa kesulitan mengatasi perasaan
@@ -486,7 +486,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -541,7 +541,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
