--- a/detail7.html
+++ b/detail7.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,11 +445,11 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Penyebab Gangguan Kesehatan Mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Ada beberapa kondisi yang bisa menjadi penyebab seseorang mengalami gangguan kesehatan jiwa, antara
                     lain:
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Cedera pada kepala.</strong></li>
                     <li><strong>2. Faktor genetik atau terdapat riwayat pengidap gangguan kesehatan jiwa dalam
                             keluarga.</strong></li>
@@ -462,7 +462,7 @@
                     <li><strong>9. Merawat anggota keluarga atau teman yang sakit kronis. </strong></li>
                     <li><strong>10. Pengangguran, kehilangan pekerjaan, atau tunawisma. </strong></li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Jika diri sendiri atau kerabat menunjukkan gejala masalah kesehatan jiwa secara terus-menerus dan
                     tidak membaik, sebaiknya segera lakukan pemeriksaan ke dokter spesialis jiwa atau psikiater untuk
                     mendapatkan pemeriksaan dan penanganan lebih lanjut. <br><br>
@@ -480,7 +480,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -535,7 +535,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
