--- a/detail8.html
+++ b/detail8.html
@@ -396,12 +396,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="150" height="150" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Arti home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -445,7 +445,7 @@
         <section class="article-info">
             <div class="container">
                 <h2 class="info-title"> Makanan Sehat Untuk Kesehatan Mental</h2>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Pandemi corona telah menempatkan banyak orang pada krisis kesehatan mental. Situasi ini membuat
                     terapi dan pengobatan untuk stres menjadi diperlukan. Namun, perlu diketahui kalau makanan yang kamu
                     konsumsi ternyata juga dapat berpengaruh pada kesehatan mental yang lebih baik. <br><br>
@@ -454,7 +454,7 @@
                     kamu merasa gugup terkadang perut menjadi mulas kan? Ini adalah salah satu penjelasan bagaimana
                     sistem pencernaan terkoneksi dengan otak.
                 </p>
-                <ol class="info-list">
+                <ol class="info-list" style="font-family: var(--ff-Oswald);">
                     <li><strong>1. Prebiotik dan Probiotik</strong><br>Prebiotik adalah senyawa natural pada makanan
                         yang tidak dapat dicerna dan secara alami ditemukan di usus. Keberadaan prebiotik mendorong
                         pertumbuhan bakteri baik, sedangkan probiotik adalah bakteri baik yang hidup di usus. Sumber
@@ -483,7 +483,7 @@
                         makanan/minuman yang kamu konsumsi. Bubuk kari, bubuk cabai, dan biji jintan adalah
                         rempah-rempah lain yang memiliki kadar antioksidan tinggi dan baik untuk kesehatan mental.</li>
                 </ol>
-                <p class="info-text">
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
                     Memperhatikan bagaimana perasaan kamu saat makan, dan apa yang kamu makan, adalah salah satu langkah
                     pertama untuk memastikan kamu mendapatkan makanan dan camilan yang seimbang. Jika kamu mendapati
                     kamu makan berlebihan saat stres, cobalah untuk pelan-pelan menghentikan kebiasaan tersebut.
@@ -501,7 +501,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -556,7 +556,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
