--- a/index.html
+++ b/index.html
@@ -100,23 +100,15 @@
 
   <section class="section hero" style="background-image: url('assets/images/hero-bg.png')" aria-label="home">
     <div class="container">
-
       <div class="hero-content">
-
-        <p class="hero-subtitle has-before" data-reveal="left">Welcome To Sejenak</p>
-
-        <h1 class="headline-lg hero-title" data-reveal="left" style="font-family: var(--ff-Amaranth); font-size: 50px;">
+        <p class="hero-subtitle has-before" data-reveal="left" style="font-size: 30px;">Welcome To Sejenak</p>
+        <h1 class="headline-lg hero-title" data-reveal="left" style="font-family: var(--ff-Amaranth); font-size: 48px;">
           Sejenak hadir, untuk pulihkan diri
         </h1>
-
       </div>
-
-    </div>
-
       <figure class="hero-banner" data-reveal="right">
         <img src="assets/images/banner.png" width="580" height="517" loading="eager" alt="banner" class="w-100">
       </figure>
-
     </div>
   </section>
 
@@ -193,6 +185,25 @@
         <div class="status" id="status"></div>
       </figure>
 
+    </div>
+  </section>
+
+  <!-- 
+        - #KATA KATA PENYEMANGAT
+      -->
+
+  <section class="section motivational-quotes" aria-labelledby="quotes-label">
+    <div class="container">
+      <h2 class="headline-md text-center" id="quotes-label">Quotes of The Day</h2>
+      <p class="section-text text-center" style="font-family: var(--ff-Rubik);">
+        "Kesehatan mental adalah perjalanan, bukan tujuan. Teruslah melangkah!"
+      </p>
+      <p class="section-text text-center" style="font-family: var(--ff-Rubik);">
+        "Setiap langkah kecil adalah kemajuan. Jangan pernah meremehkan kekuatanmu!"
+      </p>
+      <p class="section-text text-center" style="font-family: var(--ff-Rubik);">
+        "Ingatlah, kamu tidak sendirian. Ada banyak orang yang peduli padamu."
+      </p>
     </div>
   </section>
 
@@ -401,7 +412,7 @@
       <div class="footer-bottom">
 
         <p class="text copyright">
-          &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+          &copy; Sejenak 2024 | All Rights Reserved by Sejenak
         </p>
 
         <ul class="social-list">
