--- a/info.html
+++ b/info.html
@@ -180,12 +180,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="sejenak home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Arti home">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="sejenak home">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -210,16 +210,13 @@
     <!-- Hero Section -->
     <section class="section heroes" style="background-image: url('assets/images/hero-bg.png');" aria-label="home">
         <div class="containers">
-            <div class="hero-content">
-                <h1 class="headline-lg hero-title text-center" data-reveal="left">Info</h1>
-            </div>
         </div>
     </section>
 
     <!-- Card Section -->
-    <main class="section card-section">
+    <main class="section card-section" >
         <div class="container">
-            <h2 class="headline-md">Info Psikolog</h2>
+            <h2 class="headline-md" style="font-size: 30px;">Info Psikolog</h2>
             <span class="section-artikel"></span>
             <div class="card-grid">
                 <div class="card">
@@ -229,7 +226,7 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Maya Santaso</h2>
                         <p class="stats">Psikolog Pendidikan • RS Vania Bogor</p>
-                        <p class="card-description">"Fokus pada terapi remaja dan sering memberikan workshop dan seminar
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Fokus pada terapi remaja dan sering memberikan workshop dan seminar
                             tentang kesehatan mental remaja"</p>
                     </div>
                 </div>
@@ -240,7 +237,7 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Gaby Corella</h2>
                         <p class="stats">Psikolog Remaja • RS Melania Bogor</p>
-                        <p class="card-description">"Saya berfokus untuk menangani kekhawatiran pada remaja yang menuju
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Saya berfokus untuk menangani kekhawatiran pada remaja yang menuju
                             usia dewasa"</p>
                     </div>
                 </div>
@@ -251,7 +248,7 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Cindy Wijaya</h2>
                         <p class="stats">Psikolog Perkawinan • RS UMMI Bogor</p>
-                        <p class="card-description">"Saya bekerja dengan pasangan untuk mengatasi stres relasional dan
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Saya bekerja dengan pasangan untuk mengatasi stres relasional dan
                             meningkatkan komunikasi."</p>
                     </div>
                 </div>
@@ -262,7 +259,7 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Jennifer Connelly</h2>
                         <p class="stats">Psikologi Sosial • RS Hermina Bogor</p>
-                        <p class="card-description">"Saya mempelajari tingkah laku manusia dalam kaitannya dengan
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Saya mempelajari tingkah laku manusia dalam kaitannya dengan
                             lingkungan."</p>
                     </div>
                 </div>
@@ -273,7 +270,7 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Budi Prasetyo</h2>
                         <p class="stats">Psikolog Anak dan Remaja • RS PMI Bogor</p>
-                        <p class="card-description">"Berpengalaman dalam membantu individu muda mengelola stres dan
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Berpengalaman dalam membantu individu muda mengelola stres dan
                             tekanan yang mereka hadapi."</p>
                     </div>
                 </div>
@@ -284,12 +281,12 @@
                     <div class="card-content">
                         <h2 class="card-title">Dr. Anna Susanti</h2>
                         <p class="stats">Psikolog Klinis • RS BMC Bogor</p>
-                        <p class="card-description">"Spesialis dalam terapi kognitif-perilaku dan konseling stres."</p>
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">"Spesialis dalam terapi kognitif-perilaku dan konseling stres."</p>
                     </div>
                 </div>
             </div>
 
-            <h2 class="headline-md">Info Obat</h2>
+            <h2 class="headline-md" style="font-size: 30px;">Info Obat</h2>
             <span class="section-artikel"></span>
             <div class="card-grid">
                 <div class="card">
@@ -298,7 +295,7 @@
                     </figure>
                     <div class="card-content">
                         <h2 class="card-title">Buspiron</h2>
-                        <p class="card-description">Obat untuk mengatasi gangguan kecemasan umum. Obat ini dapat
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">Obat untuk mengatasi gangguan kecemasan umum. Obat ini dapat
                             meredakan gejala kecemasan, seperti gelisah, mudah tersinggung, pusing, sulit tidur, atau
                             jantung berdebar-debar.</p>
                     </div>
@@ -309,7 +306,7 @@
                     </figure>
                     <div class="card-content">
                         <h2 class="card-title">Antidepresan</h2>
-                        <p class="card-description">Obat antidepresan yang paling umum diresepkan oleh dokter sebagai
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">Obat antidepresan yang paling umum diresepkan oleh dokter sebagai
                             penanganan awal adalah obat golongan selective serotonin reuptake inhibitors (SSRIs). </p>
                     </div>
                 </div>
@@ -319,7 +316,7 @@
                     </figure>
                     <div class="card-content">
                         <h2 class="card-title">Aripiprazole</h2>
-                        <p class="card-description">Obat antipsikotik untuk meredakan gejala gangguan mental berat yang
+                        <p class="card-description" style="font-family: var(--ff-Oswald);">Obat antipsikotik untuk meredakan gejala gangguan mental berat yang
                             disebut skizofrenia. Obat ini juga bisa digunakan dalam pengobatan gangguan bipolar atau
                             depresi berat.</p>
                     </div>
@@ -334,7 +331,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -389,7 +386,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
