--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/login.css" />
-  <title>Masuk & Daftar Arti</title>
+  <title>Masuk & Daftar Sejenak</title>
 </head>
 
 <body>
