--- a/aboutus.html
+++ b/aboutus.html
@@ -23,12 +23,12 @@
     <header class="header" data-header>
         <div class="container">
             <a href="#" class="logo">
-                <img src="assets/images/arti.png" width="150" height="150" alt="Arti home">
+                <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="100" alt="Arti home">
             </a>
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="assets/images/arti.png" width="100" height="80" alt="Artihome">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="80" alt="Artihome">
                     </a>
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
                         <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -67,25 +67,32 @@
 
     <!-- About Us Section -->
     <section class="section about-us" aria-label="About Us">
-        <div class="container-about-us">
-            <div class="logo-container text-center" data-reveal="top">
-                <img src="assets/images/arti.png" alt="Logo" class="about-logo">
-            </div>
-            <p class="about-text text-center" data-reveal="left">
-                Arti merupakan platform untuk <span style="color: #349bdf;">tes kesehatan mental</span>. Tes kesehatan
-                mental adalah langkah penting untuk memahami dan menjaga kesejahteraan emosional dan psikologis Anda.
-                Tes ini membantu mengidentifikasi kondisi kesehatan mental, memberikan wawasan
-                tentang kondisi emosional Anda, dan menawarkan langkah-langkah untuk perawatan lebih lanjut.
+                <div class="container-about-us">
+                    <div class="logo-container text-center" data-reveal="top">
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" alt="Logo" class="about-logo">
+                    </div>
+                    <div class="creator-photos">
+                        <img src="assets/images/devina.jpeg" alt="Devina" class="creator-photo">
+                        <img src="assets/images/izza.jpeg" alt="Izza" class="creator-photo">
+                    </div>
+            <p class="about-text text-center" data-reveal="left" style="font-size: medium; font-family: var(--ff-Oswald);">
+                Sejenak hadir sebagai ruang untuk memberikan perhatian dan kenyamanan bagi setiap individu yang sedang menghadapi tantangan kesehatan mental. Kami percaya bahwa setiap orang berhak merasakan kedamaian dalam hidup mereka, dan terkadang, yang dibutuhkan hanya sejenak untuk berhenti, bernafas, dan merenung.
             </p>
-            <ul class="about-benefits" data-reveal="left">
-                <li><i class="fa fa-check"></i> Mendapatkan pemahaman yang lebih baik tentang kondisi kesehatan mental
-                    Anda.</li>
-                <li><i class="fa fa-check"></i> Mendeteksi dini masalah kesehatan mental dan mencegah perkembangan yang
-                    lebih serius.</li>
-                <li><i class="fa fa-check"></i> Memperoleh saran untuk langkah-langkah perawatan
-                    selanjutnya.</li>
-                <li><i class="fa fa-check"></i> Meningkatkan kesadaran diri dan kesejahteraan emosional.</li>
-                <li><i class="fa fa-check"></i> Memperkuat kemampuan mengelola stres dan tantangan hidup.</li>
+            <p class="about-text text-center" data-reveal="left" style="font-size: medium; font-family: var(--ff-Oswald);">
+                Misi kami adalah untuk menciptakan platform yang memberikan informasi, dukungan, dan alat untuk membantu kamu lebih memahami dan merawat kesehatan mental. Di Sejenak, kami menyediakan berbagai artikel, tes kesehatan mental, dan sumber daya lainnya untuk membimbing perjalanan menuju kesejahteraan mental yang lebih baik.
+            </p>
+            <p class="about-text text-center" data-reveal="left" style="font-size: medium; font-family: var(--ff-Oswald);">
+                Kami ingin menjadi teman yang menemanimu saat merasa cemas, stres, atau tertekan. Dengan mengedepankan pendekatan yang empatik, Sejenak berkomitmen untuk menyediakan tempat yang aman dan mendukung untuk berbagi perasaan, tanpa takut dihakimi.
+            </p>
+            <p class="about-text text-center" data-reveal="left" style="font-size: medium; font-family: var(--ff-Oswald);">
+                Kami mengajak kamu untuk memberi perhatian lebih pada diri sendiri, karena setiap langkah kecil menuju penyembuhan sangat berarti. Bergabunglah bersama kami, dan luangkan waktu untuk sejenak menikmati perjalanan menuju keseimbangan mental dan emosional yang lebih baik.
+            </p>
+            <ul class="about-benefits" data-reveal="left" style="font-size: 40px;">
+                <li><i class="fa fa-check"></i> Meningkatkan Pemahaman tentang Kesehatan Mental</li>
+                <li><i class="fa fa-check"></i> Mendorong Perawatan Diri yang Lebih Baik</li>
+                <li><i class="fa fa-check"></i> Memberikan Dukungan dan Motivasi untuk Menghadapi Tantangan Mental</li>
+                <li><i class="fa fa-check"></i> Meningkatkan Keterampilan Mengelola Emosi</li>
+                <li><i class="fa fa-check"></i> Memberikan Akses ke Sumber Daya Kesehatan Mental</li>
             </ul>
         </div>
     </section>
@@ -99,7 +106,7 @@
             <div class="section footer-top">
                 <div class="footer-brand" data-reveal="bottom">
                     <a href="#" class="logo">
-                        <img src="assets/images/Suara hati.png" width="136" height="46" loading="lazy"
+                        <img src="assets/images/logo_sejenak-removebg-preview.png" width="136" height="46" loading="lazy"
                             alt="Doclab home">
                     </a>
                     <ul class="contact-list has-after">
@@ -154,7 +161,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="text copyright">
-                    &copy; Arti 2024 | All Rights Reserved by Bodhicitta
+                    &copy; Sejenak 2024 | All Rights Reserved by Sejenak
                 </p>
                 <ul class="social-list">
                     <li><a href="#" class="social-link"><ion-icon name="logo-facebook"></ion-icon></a></li>
